tests/fixtures/invalid/pow_str_float_float.py
# Cannot call pow() with Str, Float, Float
x = pow("hello", 1.0, 1.0)
